<?xml version="1.0"?>
<package format="2">
  <name>home_service</name>
  <version>0.0.0</version>
  <description>The home_service package</description>

  <maintainer email="af.villamil231@gmail.com">Felipe Villamil</maintainer>
  <author email="af.villamil231@gmail.com">Felipe Villamil</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <build_depend>actionlib</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
